# school-projects

./: README.md
Java EE/frontend-new/: package.json
Java EE/semestralka-frontend/: .babelrc  package.json
Java EE/semestralka-jee/: pom.xml
NI-AFP/hw01_skalima7/: .gitlab-ci.yml  LICENSE  README.md  package.yaml  stack.yaml
NI-AFP/hw02_skalima7/: .gitlab-ci.yml  README.md  package.yaml
NI-AFP/hw03_skalima7/: README.md  package.yaml  stack.yaml
NI-AFP/hw04_skalima7/: .gitlab-ci.yml  README.md  package.yaml  stack.yaml
NI-AFP/hw05_skalima7/: README.md  package.yaml  stack.yaml
NI-AFP/hw06_skalima7/: README.md  package.yaml
NI-AFP/hw07_skalima7/: README.md  app.cabal  (+4 more)
NI-AM1/: index.md
NI-AM2/: index.md
NI-DDW/: index.md
NI-PDB/: README.adoc  main.tex
NI-PDP/: .gitignore  Makefile  README.md  basic.tex  boostmpi  checkers.cpp  common.cpp  common.h  data.cpp  loaders.cpp  main.cpp  measurements.ods  mpi.cpp  sequential.cpp  task.cpp  utils.cpp
NI-SWE/: README.md  dcap_ap_dataset.ttl  dcap_ap_distribution_1.ttl  dcap_ap_distribution_2.ttl  example_rdfa_html.html  schema_org_dataset.html  shacl_required_property copy.ttl  shacl_required_property.ttl
NI-VSM/: 10-Poisson.ipynb  README.md  test.ipynb
bi-wvm/: instalační příručka.pages  semestrálka-skyline.pages
c|cpp/BI-PA2-progtest2/: CMakeLists.txt  main.cpp  main2.cpp
ni-iot/: NI-IOT-zadání.key  README.md  prezentace výsledků.key
ni-mpi/: README.md
ni-vmm/: .gitignore  .pnp.cjs  Měření.numbers  README.md  Semestrální práce.pages  deploy.sh  package.json  tsconfig.json  webpack.config.js
(+721 files in other folders)
